tools/tests/ui/fail/l1072.cnf
// Test file for error code: L1072
// Expected error: Overflow VIDEO-MP4 character in division structure -- expected valid UTF-8 encoding
// Category: Syntax
// Layer: 1 (Lexer)

IDENTIFICATION DIVISION.
    PROGRAM "test-overflow".
EVIRONMENT DIVISION.
    OS "invalid™utf8-chars".
